<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jmg.learn._MainActivity" >

	<LinearLayout
	    android:id="@+id/LayWord"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true" >

	    <TextView
	        android:id="@+id/word"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:maxLines="3"
	        android:scrollHorizontally="false"
	        android:text="@string/hello_world"
	        android:textColor="#000000"
	        android:gravity="center"
	        android:textSize="60sp"
	        android:textStyle="bold"
	        android:typeface="normal" />
	    
	    <EditText
	        android:id="@+id/edword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:maxLines="3"
	        android:scrollHorizontally="false"
	        android:text="@string/hello_world"
	        android:textColor="#000000"
	        android:textSize="60sp"
	        android:textStyle="bold"
	        android:typeface="normal"
	        android:visibility="gone" />
	    
	  </LinearLayout>

	  <LinearLayout
	      android:id="@+id/LayCom"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_below="@+id/LayWord"
	      android:layout_centerHorizontal="true" >

	    <TextView
	        android:id="@+id/Comment"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:maxLines="3"
	        android:scrollHorizontally="false"
	        android:text="@string/hello_world"
	        android:gravity="center"
	        android:textColor="#000000"
	        android:textSize="35sp" />
	    
	    <EditText
	        android:id="@+id/edComment"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:maxLines="3"
	        android:scrollHorizontally="false"
	        android:text="@string/hello_world"
	        android:textColor="#000000"
	        android:textSize="35sp"
	        android:visibility="gone" />
	    
    </LinearLayout>
    
    <EditText
        android:id="@+id/txtMeaning1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LayCom"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:maxLines="20"
        android:minLines="2"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="40sp" >

        <requestFocus android:layout_width="wrap_content" />

    </EditText>

    <EditText
        android:id="@+id/txtMeaning2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtMeaning3"
        android:layout_below="@+id/txtMeaning1"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:maxLines="20"
        android:minLines="2"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/txtMeaning3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMeaning2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:maxLines="20"
        android:minLines="2"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="40sp" />
   
    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/hello_world"
        android:textSize="12sp" />
    
    
<RelativeLayout
    android:id="@+id/layoutButtons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/txtStatus"
    android:layout_centerInParent="true" >

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/btnSkip"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/btnSkip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/btnRight"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/btnRight"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/btnView"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnWrong"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/btnView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/btnWrong"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/btnEdit"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/btnWrong"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/btnEdit"
        android:textSize="20sp" />
</RelativeLayout>

    
</RelativeLayout>
